--- a/package.json
+++ b/package.json
@@ -1,26 +1,24 @@
 {
-  "name": "chat_example",
+  "name": "multiparty_audio_chat_example",
   "version": "1.0.1",
-  "description": "",
-  "main": "server.js",
+  "description": "Sample app demonstrates the use of EnableX video APIs to develop basic Multi-Party RTC (Real Time Communication) Audio calling Application",
+  "main": "server/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./server/server.js"
+    "start": "node server/server.js"
   },
   "devDependencies": {
-    "http": "^0.0.0",
-    "express": "^4.16.2",
-    "btoa": "^1.1.2",
-    "morgan": "^1.9.0"
+    "eslint": "^7.13.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "base-64": "^0.1.0",
-    "cryptr": "^3.0.0",
-    "express-session": "^1.15.6",
-    "http-auth": "^3.2.3",
-    "localStorage": "^1.0.3",
-    "log4js": "^1.0.1"
+    "body-parser": "^1.19.0",
+    "btoa": "^1.1.2",
+    "debug": "^4.2.0",
+    "express": "^4.16.2",
+    "log4js": "^1.0.1",
+    "morgan": "^1.9.0"
   }
 }
